feat: 単語削除APIを実装
