# openapi/main.yaml
@@ -174,6 +174,23 @@ paths:
             application/json:
               schema:
                 type: object
+    delete:
+      tags:
+        - 'Word'
+      operationId: 'deleteWord'
+      summary: '単語削除API'
+      description: '単語IDを指定して、単語を削除する'
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/id'
+      responses:
+        '204':
+          description: '正常'
+        '404':
+          description: 'Not Found'
 
 components:
   schemas:
